# Leggiero

./: .gitignore  LICENSE  README.md  index.html
Engine/: CMakeLists.txt
Engine/Common/Basic/: Basic.vcxproj  Basic.vcxproj.filters  CMakeLists.txt  LeggieroBasic.h
Engine/Common/Basic/Basic.xcodeproj/: project.pbxproj
Engine/Common/Basic/_Internal/: _CommonTypes.cpp  _CommonTypes.h  _CompileSettings.h  _LeggieroFlags.h  _Warnings.h
Engine/Common/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/Common/Engine/Application/: BaseGame.cpp  BaseGame.h  CreateGame.h  GameProcessAnchor.cpp  GameProcessAnchor.h  GameProcessAnchorObserver.h  IGame.h  IGameInitializer.h  IGameLaunchOption.h  IPlatformApplication.h
Engine/Common/Engine/Engine.xcodeproj/: project.pbxproj
Engine/Common/Engine/Module/: EngineComponent.cpp  EngineComponent.h  EngineComponentException.h  EngineComponentHolder.cpp  EngineComponentHolder.h  EngineComponentId.h  EngineModuleException.h  EngineModuleId.h  EngineModuleInterface.cpp  EngineModuleInterface.h
Engine/Common/Utility/: CMakeLists.txt  Utility.vcxproj  Utility.vcxproj.filters
Engine/Common/Utility/Data/: BufferReader.cpp  BufferReader.h  MemoryBuffer.cpp  MemoryBuffer.h
Engine/Common/Utility/Encoding/: Base64.cpp  Base64.h  HexString.cpp  HexString.h  URLEncoding.cpp  URLEncoding.h
Engine/Common/Utility/Math/: BasicRect.h  BitMath.h  Easing.cpp  Easing.h  SimpleGeometry.h  SimpleMath.h  Vector.h
Engine/Common/Utility/Object/: PointerHolder.cpp  PointerHolder.h  VerySimpleObjectPool.h
Engine/Common/Utility/String/: AsciiStringUtility.cpp  AsciiStringUtility.h  IStringBag.h
Engine/Common/Utility/Sugar/: EnumClass.h  EventNotifier.h  Finally.h  NonCopyable.h  SingletonPattern.h  SugarHeart.h
Engine/Common/Utility/Threading/: ManagedThreadPrimitives.cpp  ManagedThreadPrimitives.h  ThreadSleep.cpp  ThreadSleep.h  ThreadSleep_Android.cpp  ThreadSleep_WinPC.cpp  ThreadSleep_iOS.cpp
Engine/Common/Utility/Utility.xcodeproj/: project.pbxproj
Engine/Modules/Application/: AppPlatformType.h  Application.vcxproj  Application.vcxproj.filters  ApplicationComponent.cpp  ApplicationComponent.h  CMakeLists.txt  DeviceCommonTypes.h  IAppInformationProvider.h  IAppTextInputController.h  IAppWebViewController.h  IDeviceInformationProvider.h  IPlatformAppControl.h  RawTouchEventDispatcher.cpp  RawTouchEventDispatcher.h  RawTouchEventObserver.h  SystemEventDispatcher.cpp  SystemEventDispatcher.h  SystemEventObserver.h
Engine/Modules/Crypto/: CMakeLists.txt  Crypto.vcxproj  Crypto.vcxproj.filters  CryptoModuleInterface.cpp  CryptoModuleInterface.h
Engine/Modules/FileSystem/: BundleFileResourceComponent.cpp  BundleFileResourceComponent.h  BundleFileResourceComponent_NPO.h  CMakeLists.txt  FileSystem.vcxproj  FileSystem.vcxproj.filters  FileSystemPathComponent.cpp  FileSystemPathComponent.h  FileSystemPathComponent_NPO.h  FileSystemUtility.cpp  FileSystemUtility.h  FileSystemUtility_Android.cpp  FileSystemUtility_WinPC.cpp  FileSystemUtility_iOS.mm
Engine/Modules/Font/: CMakeLists.txt  Font.vcxproj  Font.vcxproj.filters  FontModuleInterface.cpp  FontModuleInterface.h  GlyphManagerComponent.cpp  GlyphManagerComponent.h
Engine/Modules/Graphics/: CMakeLists.txt  GraphicResourceManagerComponent.cpp  GraphicResourceManagerComponent.h  Graphics.vcxproj  Graphics.vcxproj.filters  GraphicsModuleInterface.cpp  GraphicsModuleInterface.h  GraphicsThreadContext.h
Engine/Modules/HTTP/: AsyncTaskHttpComponent.cpp  AsyncTaskHttpComponent.h  AsyncTaskHttpComponent_iOS.mm  CMakeLists.txt  HTTP.vcxproj  HTTP.vcxproj.filters  HttpCommonType.cpp  HttpCommonType.h  HttpModuleInterface.cpp  HttpModuleInterface.h  HttpRequest.h  HttpRequest_iOS.mm  HttpResult.cpp  HttpResult.h  HttpUtility.cpp  HttpUtility.h
Engine/Modules/Input/: CMakeLists.txt  IImmediateTouchInputEventObserver.h  Input.vcxproj  Input.vcxproj.filters  InputCommonTypes.h  TouchInputComponent.cpp  TouchInputComponent.h
Engine/Modules/LUI/: CMakeLists.txt  LegacyUI.vcxproj  LegacyUI.vcxproj.filters  UIManager.cpp  UIManager.h  UIObject.cpp  UIObject.h
Engine/Modules/Log/: CMakeLists.txt  DebugLogger.cpp  DebugLogger.h  FileLogWriter.cpp  FileLogWriter.h  ILogWriter.h  Log.vcxproj  Log.vcxproj.filters  LogModuleInterface.cpp  LogModuleInterface.h  LogTypes.h  Logger.cpp  Logger.h  PlatformDefaultLogWriter.h  PlatformDefaultLogWriter_Android.cpp  PlatformDefaultLogWriter_WinPC.cpp  PlatformDefaultLogWriter_iOS.mm  ThreadedLogWriter.cpp  ThreadedLogWriter.h
Engine/Modules/Sound/: BGMPlayerComponent.cpp  BGMPlayerComponent.h  CMakeLists.txt  Sound.vcxproj  Sound.vcxproj.filters  SoundMixerComponent.cpp  SoundMixerComponent.h
Engine/Modules/Task/: CMakeLists.txt  ConcreteTaskManager.cpp  Task.vcxproj  Task.vcxproj.filters  TaskManagerComponent.cpp  TaskManagerComponent.h  TaskSubSystemInterface.h  TaskTypes.h
Engine/Platform/Platform.Android/: AndroidApplicationComponent.cpp  AndroidCommon.cpp  AndroidCommon.h  AndroidPlatformApplication.cpp  AndroidPlatformApplication.h  AndroidPlatformApplication_AppControl.cpp  AndroidPlatformApplication_Events.cpp  AndroidPlatformApplication_Touch.cpp  AndroidPlatformSetting.h  CMakeLists.txt  Platform.Android.vcxproj  Platform.Android.vcxproj.filters
Engine/Platform/Platform.WinPC/: Platform.WinPC.aps  Platform.WinPC.rc  Platform.WinPC.vcxproj  Platform.WinPC.vcxproj.filters  WinPCApplicationComponent.cpp  WinPCPlatformApplication.cpp  WinPCPlatformApplication.h  WinPCPlatformApplication_Touch.cpp  WindowsCommon.h  WindowsUtility.cpp  WindowsUtility.h  resource.h
Engine/Platform/Platform.iOS/: LeggieroAppDelegate.h  LeggieroAppDelegate.mm  LeggieroIOSCommon.h  LeggieroIOSCommon.mm  LeggieroViewController.h  LeggieroViewController.mm  iOSApplicationComponent.mm  iOSGLThreadContext.mm  iOSPlatformApplication.h  iOSPlatformApplication.mm  iOSPlatformApplication_AppControl.mm  iOSPlatformApplication_Events.cpp  iOSPlatformApplication_Touch.cpp  iOSPlatformSetting.h  iOSPlatformUtility.h  iOSPlatformUtility.mm
en/: .buildinfo  (+4 more)
(+701 files in other folders)
